--- a/continuation_newton_heatequation.ipynb
+++ b/continuation_newton_heatequation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,27 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([[1,2],[3,4]])[1,0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,37 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "C = np.sqrt(1e-16)\n",
-    "C = np.max([C, 1/np.linalg.norm(dFdt(sol))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.05567769930602737"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "C"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -316,13 +266,7 @@
       "target time t = 0\n",
       "check timestep start of loop 1\n",
       "niter 0\n",
-      "comput tangent\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "comput tangent\n",
       "initial alpha: 1.79883295952924\n",
       "Neighborhooodcheck: residual 1.257620666213111, restol: 0.0031622776601683794\n",
       "out of neighborhood\n",
@@ -2927,9 +2871,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb Cell 15\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X15sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     dt \u001b[39m=\u001b[39m dt2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X15sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39maccept timestep \u001b[39m\u001b[39m{\u001b[39;00msol\u001b[39m.\u001b[39mtimestep\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X15sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m     sol\u001b[39m.\u001b[39;49mnewTime(dt)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X15sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X15sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39moutside neighborhood, try newton correction\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;32m/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb Cell 15\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X15sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mIndexError\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X15sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mmaximum timestep reached\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X15sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapplyRB()\n",
-      "\u001b[1;32m/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb Cell 15\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X15sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapplyRB\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X15sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msolution[\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtimestep, \u001b[39m0\u001b[39;49m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mTleft\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X15sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msolution[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtimestep, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mTright\n",
+      "\u001b[1;32m/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb Cell 12\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X20sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     dt \u001b[39m=\u001b[39m dt2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X20sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39maccept timestep \u001b[39m\u001b[39m{\u001b[39;00msol\u001b[39m.\u001b[39mtimestep\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X20sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m     sol\u001b[39m.\u001b[39;49mnewTime(dt)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X20sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X20sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39moutside neighborhood, try newton correction\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32m/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb Cell 12\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X20sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mIndexError\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X20sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mmaximum timestep reached\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X20sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapplyRB()\n",
+      "\u001b[1;32m/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb Cell 12\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X20sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapplyRB\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X20sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msolution[\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtimestep, \u001b[39m0\u001b[39;49m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mTleft\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/buchwalj/nonlinsolver_test/continuation_newton_heatequation.ipynb#X20sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msolution[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtimestep, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mTright\n",
       "\u001b[0;31mIndexError\u001b[0m: index 50 is out of bounds for axis 0 with size 50"
      ]
     }
@@ -2994,7 +2938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
